--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -200,12 +200,12 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
 +"<small>Ce site est créé par Lilian Besson, © 2011-2015</small>",
   {layout:'center', type:'information'}); });
 {% if prev %}Mousetrap.bind(["left", "p"], function() { alert("Going to prev <a href=\"{{ prev.link|e }}\">{{ prev.link|e }}</a>"); location.href="{{ prev.link|e }}"; });{% endif %}
- Mousetrap.bind(["i", "home"], function() { alert("Going to index.html"); location.href="index.html";});
+ Mousetrap.bind(["i"], function() { alert("Going to index.html"); location.href="index.html";});
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "29 10 2015, 12h:00m:00s";
-    var day   = last_updated_value.substring(0,  2 ) || "29";
-    var month = last_updated_value.substring(3,  6 ) || "10"; // FIXME convert Sep -> 09, Oct -> 10 ect...
+   var last_updated_value = "{{ last_updated }}" || "06 11 2015, 12h:00m:00s";
+    var day   = last_updated_value.substring(0,  2 ) || "06";
+    var month = last_updated_value.substring(3,  6 ) || "11"; // FIXME convert Sep -> 09, Oct -> 10 ect...
     var year  = last_updated_value.substring(7,  11) || "2015";
     var hours = last_updated_value.substring(13, 15) || "12";
     var mins  = last_updated_value.substring(17, 19) || "00";
