--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -121,8 +121,10 @@
 
 {% block document %}
 <div id="divforkit">
-  <a class="forkit" data-text="Sur BitBucket ?" data-text-detached="Tout est OpenSource !" href="https://bitbucket.org/lbesson/web-sphinx/">
-  <img style="position: absolute; top: 0; right: 0; border: 0;" alt="Consultez mes dépôts git!" /></a>
+<!--  <a class="forkit" data-text="Sur Bitbucket ?" data-text-detached="Tout est open-source !" href="https://bitbucket.org/lbesson/web-sphinx/"> -->
+<!--  <img style="position: absolute; top: 0; right: 0; border: 0;" alt="Consultez mes dépôts git!" /></a> -->
+  <a class="forkit" data-text="Not afraid" data-text-detached="I am not afraid." href="http://perso.crans.org/besson/notafraid.html">
+  <img style="position: absolute; top: 0; right: 0; border: 0;" alt="Not afraid" /></a>
 </div>
 {{ super() }}
 {% endblock %}
