- CV plus bas - Drapeau UK/US et pas juste UK - remove pokedex-doc - typo https facebook social (useless, it was disabled from a long time)

--- a/.templates/language-selector.html
+++ b/.templates/language-selector.html
@@ -4,7 +4,7 @@
 
     Add one link to switch the language of the page (English to French, or French to English, soon more ?).
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <div class="language-selector">
@@ -13,7 +13,7 @@
 		window.document.write('<h3>Lire en anglais ?</h3><a class="image-reference" href="'
 			+ b + '.en.html" title="En anglais ?" >'
 			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
-		    + 'src="{{ pathto('_images/.en.gif', true)|e }}" alt="En anglais ?" /></a>'); 
+		    + 'src="{{ pathto('_images/.en-us.gif', true)|e }}" alt="En anglais ?" /></a>'); 
 	};
 	if (e == '.en.html') {
 		window.document.write('<h3>Read it in French?</h3><a class="image-reference" href="'
