--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -14,5 +14,5 @@
     <!-- <li><a href="https://encrypt.to/0x01AACDB9C108F8A0">encrypt.to/lbesson</a></li> -->
   </ul>
 <!--   <ul class="social-icons">
-    <li><a class="facebook" href="http://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
+    <li><a class="facebook" href="https://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
   </ul> -->
