--- a/.templates/download.fr.html
+++ b/.templates/download.fr.html
@@ -4,7 +4,7 @@
 
     Download global page. (fr version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {% extends "layout.html" %}
