--- a/.templates/globaltoc.en.html
+++ b/.templates/globaltoc.en.html
@@ -4,7 +4,7 @@
 
     Sphinx sidebar template: global table of contents. (en version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <h3><a href="{{ pathto(master_doc) }}" title="Go to master document !" >Global table of contents</a></h3>
