--- a/.templates/sidebar_otherserver.en.html
+++ b/.templates/sidebar_otherserver.en.html
@@ -4,7 +4,7 @@
 
     Display links to see the page in an other server. (en version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <h3>Consult this page on another server</h3>
