--- a/.templates/linkpdf.fr.html
+++ b/.templates/linkpdf.fr.html
@@ -4,7 +4,7 @@
 
     Add links to cv.fr.pdf on each French pages.
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <h3>Mon CV en PDF ?</h3>
