--- a/.templates/localtoc.fr.html
+++ b/.templates/localtoc.fr.html
@@ -4,7 +4,7 @@
 
     Sphinx sidebar template: local table of contents. (fr version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if display_toc %}
