--- a/.templates/relations.fr.html
+++ b/.templates/relations.fr.html
@@ -4,7 +4,7 @@
 
     Add links to the next and the prev pages. (fr version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if prev %}<h4>Page précédente</h4>
