--- a/.templates/sidebar_gpg.fr.html
+++ b/.templates/sidebar_gpg.fr.html
@@ -4,7 +4,7 @@
 
     Add links to a GPG key in the sidebar. (fr version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <h3>Ma clé publique PGP</h3>
