--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -4,7 +4,7 @@
 
     Add links to social networks in the sidebar. (en version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
   <h3><a title="More details!" href="{{ pathto('callme.en.html', true)|e }}">Contact me ?</a></h3>
