--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -4,7 +4,7 @@
 
     Add links to social networks in the sidebar. (fr version)
 
-    :copyright: Copyright 2013 Lilian Besson
+    :copyright: Copyright 2013-2015 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
   <h3><a title="Plus de détails !" href="{{ pathto('callme.fr.html', true)|e }}">Infos de contact</a></h3>
