--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -237,8 +237,8 @@ to collect audience log, you can disable it with
      src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel" />
 </noscript>
 <div class="supportBadges"><ul>
-<li><a class="image-reference" title="Tested on Firefox v42.0 and elinks v0.12pre6" href="http://www.mozilla.org/en-US/firefox/all/">
- <img alt="Tested on Firefox v42.0 and elinks v0.12pre6"
+<li><a class="image-reference" title="Tested on Firefox v42.0, Chromium v35 and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
+ <img alt="Tested on Firefox v42.0, Chromium v35 and elinks v0.12pre6"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Uses Google Analytics" href="https://www.google.com/analytics/">
