qc.to not available, moving to perso.crans.org/besson/

--- a/README.html
+++ b/README.html
@@ -67,7 +67,7 @@ This project use the following software :
 
 ## License
 This project is released under the **GPLv3 license**, for more details,
-take a look at the [LICENSE file](http://besson.qc.to/LICENSE.html) in the source.
+take a look at the [LICENSE file](http://perso.crans.org/besson/LICENSE.html) in the source.
 
 *Basically, that allow you to use all or part of the project for you own business.*
 
