--- a/footer.html
+++ b/footer.html
@@ -157,7 +157,7 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
 +" - Droite (<b>→</b> ou <b>n</b>) : <a href=\"autostop.fr.html\">page suivante</a>,</br>\n"
 +"</br>\n Abonnez-vous à un de mes flux RSS :</br>\n"
 +"  - <a href=\"https://bitbucket.org/lbesson/web-sphinx/rss\">bitbucket.org/lbesson/web-sphinx/rss</a></br>\n"
-+"  - <a href=\"http://besson.qc.to/rss.xml\">besson.qc.to/rss.xml</a></br>\n"
++"  - <a href=\"http://perso.crans.org/besson/rss.xml\">perso.crans.org/besson/rss.xml</a></br>\n"
 +"<small>Ce site est créé par Lilian Besson, © 2011-2014</small>",
   {layout:'center', type:'information'}); });
  Mousetrap.bind(["i", "home"], function() { alert("Going to index.html"); location.href="http://perso.crans.org/besson/index.html";});
@@ -257,8 +257,8 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
  * I'm a Computer Science and Mathematics student, at ENS de Cachan.
  * This file layout.html is part of my web pages, generated with Sphinx.
  * Those pages are hosted
- *  - here on the Crans network, http://perso.crans.org/besson or http://besson.qc.to;
- *  - here at ENS de Cachan, http://www.dptinfo.ens-cachan.fr/~lbesson or http://lbesson.qc.to;
+ *  - here on the Crans network, http://perso.crans.org/besson or http://perso.crans.org/besson;
+ *  - here at ENS de Cachan, http://www.dptinfo.ens-cachan.fr/~lbesson or http://lperso.crans.org/besson;
  *  - sometimes on my machine, https://jarvis.crans.org/ (only locally on the crans network).
  * This document is a Jinja Template, to modify all the HTML pages produced
  * by Sphinx. It have to be in the '.templates' folder.
