qc.to not available, moving to perso.crans.org/besson/

--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -16,8 +16,8 @@
 <h3>My résumé in PDF</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.en.pdf" title="PDF English version"
-         rel="nofollow">See the English PDF version</a>, compiled from LaTeX with <a href="http://besson.qc.to/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
+         rel="nofollow">See the English PDF version</a>, compiled from LaTeX with <a href="http://perso.crans.org/besson/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
   <li><a style="text-decoration: underline" href="cv.fr.pdf" title="PDF French version"
-         rel="nofollow">See the French PDF version</a>, compiled from LaTeX with <a href="http://besson.qc.to/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
+         rel="nofollow">See the French PDF version</a>, compiled from LaTeX with <a href="http://perso.crans.org/besson/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
 </ul>
 {%- endif %}
