--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -10,8 +10,8 @@
 {% extends "!layout.html" %}
 {% block doctype %}<!DOCTYPE html>{% endblock %}
 {% block rootrellink %}
- <li><a href="http://besson.qc.to/" title="Page principale">
-  <img src="{{ pathto('_static/.besson.png', true)|e }}" alt="http://besson.qc.to/" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
+ <li><a href="http://perso.crans.org/besson/" title="Page principale">
+  <img src="{{ pathto('_static/.besson.png', true)|e }}" alt="http://perso.crans.org/besson/" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
  <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
 {% endblock %}
 {# Expériences. Liste des blocks utilisables.
@@ -26,8 +26,8 @@
   <meta name="viewport" content="width=device-width, maximum-scale=1.5, initial-scale=1, target-densitydpi=device-dpi"/>
   <meta name="author" content="Lilian Besson" />
   <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking,teaching,India,Hyderabad,Mahindra,Ecole Centrale,Mahindra Ecole Centrale,MEC,ECP,Ecole Centrale Paris,Spyder,CS101,MA101,MA102,jarvis,IPython,Professor,Professeur,Teacher,Teaching assistant,Enseignement,Enseignant,Colles,TP,TD,Lakanal,MP,Prépa,Colleur" />
-  <!-- RSS workflow (from besson.qc.to) -->
-  <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://besson.qc.to/rss.xml" />
+  <!-- RSS workflow (from perso.crans.org/besson) -->
+  <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution du dépôt git associé" href="https://bitbucket.org/lbesson/web-sphinx/rss" />
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution du dépôt git contenant les scripts" href="https://bitbucket.org/lbesson/web-sphinx-scripts/rss" />
   <link rel="stylesheet" media="screen and (min-width: 681px)" href="{{ pathto('_static/forkit.css', true)|e }}" />
@@ -197,7 +197,7 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
 {% if next %}+" - Droite (<b>→</b> ou <b>n</b>) : <a href=\"{{ next.link|e }}\">page suivante</a>,</br>\n"{% endif %}
 +"</br>\n Abonnez-vous à un de mes flux RSS :</br>\n"
 +"  - <a href=\"https://bitbucket.org/lbesson/web-sphinx/rss\">bitbucket.org/lbesson/web-sphinx/rss</a></br>\n"
-+"  - <a href=\"http://besson.qc.to/rss.xml\">besson.qc.to/rss.xml</a></br>\n"
++"  - <a href=\"http://perso.crans.org/besson/rss.xml\">perso.crans.org/besson/rss.xml</a></br>\n"
 +"<small>Ce site est créé par Lilian Besson, © 2011-2016</small>",
   {layout:'center', type:'information'}); });
 {% if prev %}Mousetrap.bind(["left", "p"], function() { alert("Going to prev <a href=\"{{ prev.link|e }}\">{{ prev.link|e }}</a>"); location.href="{{ prev.link|e }}"; });{% endif %}
