--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -16,8 +16,8 @@
 <h3>Mon CV en PDF</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.fr.pdf" title="Version française PDF"
-         rel="nofollow">Voir la version française PDF</a>, compilée depuis LaTeX par <a href="http://besson.qc.to/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
+         rel="nofollow">Voir la version française PDF</a>, compilée depuis LaTeX par <a href="http://perso.crans.org/besson/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
   <li><a style="text-decoration: underline" href="cv.en.pdf" title="Version anglaise PDF"
-         rel="nofollow">Voir la version anglais PDF</a>, compilée depuis LaTeX par <a href="http://besson.qc.to/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
+         rel="nofollow">Voir la version anglais PDF</a>, compilée depuis LaTeX par <a href="http://perso.crans.org/besson/bin/pdflatex" title="Un script colorant la sortie pdflatex pour la rendre plus lisible">PDFLaTeX</a>.</li></br>
 </ul>
 {%- endif %}
