Update softwares used to build and test the website

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -275,17 +275,17 @@ to collect audience log, you can disable it with
       style="width: 60.0px; height: 12.0px;" /></a></li>
 <li><script type="text/javascript">
   if ( (window.location.host.substring(0,6) == 'jarvis') || (window.location.host.substring(0,6) == '127.0.') || (window.location.host.substring(0,7) == '0.0.0.0') ) {
-  window.document.write("<a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx v1.9.3 (Ubuntu) on "
+  window.document.write("<a class=\"image-reference\" title=\"Web server : nginx v1.9.3 (Ubuntu)\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx v1.9.3 (Ubuntu) on "
   + window.location.host + ":80\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>");
   }
   else {
-  window.document.write("<a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.4.10 (Debian) on "
+  window.document.write("<a class=\"image-reference\" title=\"Web server : Apache HTTPD v2.4.10 (Debian)\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache HTTPD v2.4.10 (Debian) on "
   + window.location.host + ":80\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>");
   };
   NProgress.inc();
   </script>
   <noscript>
-  <a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.22" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+  <a class="image-reference" title="Web server : Apache HTTPD v2.4.10 (Debian)" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache HTTPD v2.4.10 (Debian)" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
   </noscript>
 </li></ul></div>
    <script type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}"></script>
