Update forkit.js to remove animation.

--- a/.templates/geekcode.html
+++ b/.templates/geekcode.html
@@ -4,9 +4,9 @@
 
     Intégration d'un petit Geek Code.
 
-    :copyright: Copyright 2014 Lilian Besson
+    :copyright: Copyright 2016 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <div id="geekCode">
-	<small><a href="http://www.geekcode.com/geek.html" title="Geek Code v3.12">Geek Code v3.12</a>: GCS/M/S/ d- s-:+ a? C++++ UL P L++ E-- W+++ N- K- W+ M- V-- PS++ PE- Y+ PGP+ t- R* !tv b++ D- G e+++ h r% z?</small>
+	<small><a href="https://en.wikipedia.org/wiki/Geek_Code" title="Geek Code v3.12">Geek Code v3.12</a>: GCS/M/S/ d- s-:+ a? C++++ UL P L++ E-- W+++ N- K- W+ M- V-- PS++ PE- Y+ PGP+ t- R* !tv b++ D- G e+++ h r% z?</small>
 </div>
