--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -25,7 +25,7 @@
 {% block extrahead %}
   <meta name="viewport" content="width=device-width, maximum-scale=1.5, initial-scale=1, target-densitydpi=device-dpi"/>
   <meta name="author" content="Lilian Besson" />
-  <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking,teaching,India,Hyderabad,Mahindra,Ecole Centrale,Mahindra Ecole Centrale,MEC,ECP,Ecole Centrale Paris,Spyder,CS101,MA101,MA102,jarvis,IPython,Professor,Professeur,Teacher,Teaching assistant,Enseignement,Enseignant,Colles,TP,TD,Lakanal,MP,Prépa,Colleur,Mr Besson" />
+  <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking,teaching,India,Hyderabad,Mahindra,Ecole Centrale,Mahindra Ecole Centrale,MEC,ECP,Ecole Centrale Paris,Spyder,CS101,MA101,MA102,jarvis,IPython,Professor,Professeur,Teacher,Teaching assistant,Enseignement,Enseignant,Colles,TP,TD,Lakanal,MP,Prépa,Colleur,Mr Besson,EPFL,LIB,BIG,splines" />
   <!-- RSS workflow (from perso.crans.org/besson) -->
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution du dépôt git associé" href="https://bitbucket.org/lbesson/web-sphinx/rss" />
@@ -111,7 +111,7 @@
   };
   writeLocationOfThePage("<li>", "</li>");
  </script>
- <noscript><li><span style="color: red">(JavaScript is disabled)</span></li></noscript>
+ <noscript><li><span style="color: red;">(JavaScript is disabled)</span></li></noscript>
 {% endblock %}
 
 
@@ -198,9 +198,9 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
  Mousetrap.bind(["i"], function() { alert("Going to index.html"); location.href="index.html";});
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "21 03 2016, 12h:00m:00s";
-    var day   = last_updated_value.substring(0,  2 ) || "21";
-    var month = last_updated_value.substring(3,  6 ) || "03";
+   var last_updated_value = "{{ last_updated }}" || "05 05 2016, 12h:00m:00s";
+    var day   = last_updated_value.substring(0,  2 ) || "05";
+    var month = last_updated_value.substring(3,  6 ) || "05";
     var year  = last_updated_value.substring(7,  11) || "2016";
     var hours = last_updated_value.substring(13, 15) || "12";
     var mins  = last_updated_value.substring(17, 19) || "00";
@@ -231,16 +231,16 @@ to collect audience log, you can disable it with
      src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel" />
 </noscript>
 <div class="supportBadges"><ul>
-<li><a class="image-reference" title="Tested on Firefox v45, Chromium v35 and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
- <img alt="Tested on Firefox v45, Chromium v35 and elinks v0.12pre6"
+<li><a class="image-reference" title="Tested on Firefox v46, Chromium v35 and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
+ <img alt="Tested on Firefox v46, Chromium v35 and elinks v0.12pre6"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Uses Google Analytics" href="https://www.google.com/analytics/">
  <img alt="Uses Google Analytics"
       src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Written with GNU Nano 2.4.2 and Sublime Text v3.107" href="http://www.nano-editor.org/">
- <img alt="Written with GNU Nano 2.4.2 and Sublime Text v3.107"
+<li><a class="image-reference" title="Written with GNU Nano 2.4.2 and Sublime Text v3.1.11" href="http://www.nano-editor.org/">
+ <img alt="Written with GNU Nano 2.4.2 and Sublime Text v3.1.11"
       src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="This website is an Open Source project, released with the GPLv3 License" href="http://www.gnu.org/licenses/gpl.html">
@@ -259,8 +259,8 @@ to collect audience log, you can disable it with
  <img alt="Made on (X)Ubuntu 15.10"
       src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.5" href="https://bitbucket.org/lbesson/web-sphinx/" >
- <img alt="Source code hosted on bitbucket.org, managed with Git v2.5"
+<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.5.0" href="https://bitbucket.org/lbesson/web-sphinx/" >
+ <img alt="Source code hosted on bitbucket.org, managed with Git v2.5.0"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}"
       style="width: 36.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Powered by MathJax v2.6.0" href="http://www.mathjax.org">
