Update layout.noty, more translation.

--- a/.templates/relations.fr.html
+++ b/.templates/relations.fr.html
@@ -9,5 +9,5 @@
 #}
 {%- if prev %}<h4>Page précédente</h4>
   <p class="topless"><a href="{{ prev.link|e }}" title="Page précédente !">{{ prev.title }}</a></p>{%- endif %}
-{%- if next %}<h4>Page suitante</h4>
+{%- if next %}<h4>Page suivante</h4>
   <p class="topless"><a href="{{ next.link|e }}" title="Page suivante !">{{ next.title }}</a></p>{%- endif %}
