--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -30,6 +30,7 @@
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution du dépôt git associé" href="https://bitbucket.org/lbesson/web-sphinx/rss" />
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution du dépôt git contenant les scripts" href="https://bitbucket.org/lbesson/web-sphinx-scripts/rss" />
+  <link rel="author" href="humans.txt" />
   <link rel="stylesheet" media="screen and (min-width: 681px)" href="{{ pathto('_static/forkit.css', true)|e }}" />
   <link rel="stylesheet" media="screen" href="{{ pathto('_static/buttons.css', true)|e }}" />
   <link rel="stylesheet" media="screen and (min-width: 380px)" href="{{ pathto('_static/nprogress.css', true)|e }}" />
@@ -114,7 +115,6 @@
  <noscript><li><span style="color: red;">(JavaScript is disabled)</span></li></noscript>
 {% endblock %}
 
-
 {% block document %}
 <div id="divforkit">
   <a class="forkit" data-text="Sur Bitbucket ?" data-text-detached="Tout est open-source !" href="https://bitbucket.org/lbesson/web-sphinx/">
@@ -186,7 +186,7 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
 +" - <b>h</b> : affiche <i>ce message d'aide</i>,</br>\n"
 +" - <b>i</b> : retourne à l'index,</br>\n"
 +" - <b>s</b> : permet de choisir le thème parmis trois disponibles : orange, vert et violet (par défaut),</br>\n"
-+" - <b>q</b> : lance la lecture rapide, via <a title=\"Réglage par défaut à 600 Mots/min\" href=\"http://lbesson.bitbucket.org/squirt/\">SquirtFR</a>,</br>\n"
++" - <b>q</b> : lance la lecture rapide, via <a title=\"Réglage par défaut à 600 mots/min\" href=\"http://lbesson.bitbucket.org/squirt/\">SquirtFR</a>,</br>\n"
 {% if prev %}+" - Gauche (<b>←</b> ou <b>p</b>) : <a href=\"{{ prev.link|e }}\">page précédente</a>,</br>\n"{% endif %}
 {% if next %}+" - Droite (<b>→</b> ou <b>n</b>) : <a href=\"{{ next.link|e }}\">page suivante</a>,</br>\n"{% endif %}
 +"</br>\n Abonnez-vous à un de mes flux RSS :</br>\n"
@@ -198,8 +198,8 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
  Mousetrap.bind(["i"], function() { alert("Going to index.html"); location.href="index.html";});
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "09 05 2016, 12h:00m:00s";
-    var day   = last_updated_value.substring(0,  2 ) || "09";
+   var last_updated_value = "{{ last_updated }}" || "31 05 2016, 12h:00m:00s";
+    var day   = last_updated_value.substring(0,  2 ) || "31";
     var month = last_updated_value.substring(3,  6 ) || "05";
     var year  = last_updated_value.substring(7,  11) || "2016";
     var hours = last_updated_value.substring(13, 15) || "12";
@@ -251,7 +251,7 @@ to collect audience log, you can disable it with
  <img alt="Python v2.7.10 powered :)"
       src="{{ pathto('_images/.python_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Made with Sphinx v1.4a0+" href="http://sphinx-doc.org/install.html">
+<li><a class="image-reference" title="Made with Sphinx v1.4a0+" href="http://sphinx-doc.org/">
  <img alt="Made with Sphinx v1.4a0+"
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
@@ -283,7 +283,7 @@ to collect audience log, you can disable it with
   </noscript>
 </li></ul></div>
    <script type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}"></script>
-  <!-- MathJax.js (http://mathjax.org/) async is quicker -->
+  <!-- MathJax.js (http://mathjax.org/) async is quicker, hosted locally is safer and quicker -->
    <!-- <script async type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML&amp;locale=fr"></script> -->
    <script async type="text/javascript" src="{{ pathto('_static/mathjax/MathJax.js', true)|e }}?config=TeX-AMS-MML_HTMLorMML&amp;locale=fr"></script>
 </div>
