--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" media="screen" href="{{ pathto('_static/buttons.css', true)|e }}" />
   <link rel="stylesheet" media="screen and (min-width: 380px)" href="{{ pathto('_static/nprogress.css', true)|e }}" />
   <link rel="stylesheet" href="{{ pathto('_static/hacks.css', true)|e }}" />
+  <link rel="stylesheet" href="{{ pathto('_static/sharingbuttons.css', true)|e }}" />
   <!-- jQuery.Noty.js (Source: http://ned.im/noty/#installation) -->
    <script type="text/javascript" src="{{ pathto('_static/noty/jquery.noty.packaged.min.js', true)|e }}"></script>
   <!-- MouseTrap.js (http://craig.is/killing/mice) -->
@@ -95,20 +96,17 @@
     window.document.write(beforetext + "<span class=\"locationOfThePage\">"
       + "<a title=\"Cette page '" + window.location.protocol + "//" + window.location.host + window.location.pathname
       + "'\" href=\"" + window.location.protocol + "//" + window.location.host + window.location.pathname
-      // + "\">" + window.location.protocol + "//" + window.location.host + window.location.pathname  // XXX Old style, full URL
-      + "\">" + window.location.pathname.split('/').pop()  // XXX New style, only the pagename
+      + "\">" + window.location.pathname.split('/').pop()
       + "</a></span>" + aftertext);
     };
     if (e == '.fr.html') {
       window.document.write('<li class="right"><a class="image-reference" href="'
         + b + '.en.html" title="En anglais ?" >'
-        // + '<img class="languageswitch" src="{{ pathto('_images/.en.gif', true)|e }}" alt="En anglais ?" />'
         + 'En anglais ?</a> | </li>');
     };
     if (e == '.en.html') {
       window.document.write('<li class="right"><a class="image-reference" href="'
         + b + '.fr.html" title="In French?" >'
-        // + '<img class="languageswitch" src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" />'
         + 'In French?</a> | </li>');
     };
   };
@@ -130,7 +128,7 @@
 <div class="footer">
   <script type="text/javascript">
   	NProgress.start();
-	function changeStyle(newcolor) {
+	  function changeStyle(newcolor) {
 		if (newcolor != "") {
 			console.log("[INFO] Loading the stylesheet '" + ("http://perso.crans.org/besson/_static/" + newcolor + ".css") + "'");
 			$("head").append(
@@ -200,9 +198,9 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
  Mousetrap.bind(["i"], function() { alert("Going to index.html"); location.href="index.html";});
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "31 05 2016, 12h:00m:00s";
-    var day   = last_updated_value.substring(0,  2 ) || "31";
-    var month = last_updated_value.substring(3,  6 ) || "05";
+   var last_updated_value = "{{ last_updated }}" || "03 08 2016, 12h:00m:00s";
+    var day   = last_updated_value.substring(0,  2 ) || "03";
+    var month = last_updated_value.substring(3,  6 ) || "08";
     var year  = last_updated_value.substring(7,  11) || "2016";
     var hours = last_updated_value.substring(13, 15) || "12";
     var mins  = last_updated_value.substring(17, 19) || "00";
@@ -233,16 +231,16 @@ to collect audience log, you can disable it with
      src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel" />
 </noscript>
 <div class="supportBadges"><ul>
-<li><a class="image-reference" title="Tested on Firefox v46, Chromium v35 and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
- <img alt="Tested on Firefox v46, Chromium v35 and elinks v0.12pre6"
+<li><a class="image-reference" title="Tested on Firefox v47, Chromium v35 and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
+ <img alt="Tested on Firefox v47, Chromium v35 and elinks v0.12pre6"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Uses Google Analytics" href="https://www.google.com/analytics/">
  <img alt="Uses Google Analytics"
       src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Written with GNU Nano 2.4.2 and Sublime Text v3.1.11" href="http://www.nano-editor.org/">
- <img alt="Written with GNU Nano 2.4.2 and Sublime Text v3.1.11"
+<li><a class="image-reference" title="Written with GNU Nano 2.4.2 and Sublime Text v3.1.18" href="http://www.nano-editor.org/">
+ <img alt="Written with GNU Nano 2.4.2 and Sublime Text v3.1.18"
       src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="This website is an Open Source project, released with the GPLv3 License" href="http://www.gnu.org/licenses/gpl.html">
@@ -265,12 +263,12 @@ to collect audience log, you can disable it with
  <img alt="Source code hosted on bitbucket.org, managed with Git v2.5.0"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}"
       style="width: 36.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Powered by MathJax v2.6.0" href="http://www.mathjax.org">
- <img alt="Powered by MathJax v2.6.0"
+<li><a class="image-reference" title="Powered by MathJax v2.5.0" href="http://www.mathjax.org">
+ <img alt="Powered by MathJax v2.5.0"
       src="{{ pathto('_images/.mathjax_60_12.png', true)|e }}"
       style="width: 60.0px; height: 12.0px;" /></a></li>
 <li><script type="text/javascript">
-  if ( (window.location.host.substring(0,6) == 'jarvis') || (window.location.host.substring(0,6) == '127.0.') || (window.location.host.substring(0,7) == '0.0.0.0') ) {
+  if ( (window.location.host.substring(0, 6) == 'jarvis') || (window.location.host.substring(0,6) == '127.0.') || (window.location.host.substring(0, 7) == '0.0.0.0') ) {
   window.document.write("<a class=\"image-reference\" title=\"Web server : nginx v1.9.3 (Ubuntu)\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx v1.9.3 (Ubuntu) on "
   + window.location.host + ":80\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>");
   }
