--- a/.templates/sharingbuttons.en.html
+++ b/.templates/sharingbuttons.en.html
@@ -10,7 +10,7 @@
 <h3>Share this page?</h3>
 <ul class="resp-sharing-button__ul"><li>
 <!-- sharingbuttons.io for Facebook -->
-<a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}" target="_blank" aria-label="">
+<a class="resp-sharing-button__link" title="Share this article {{ pagename|e }}{{ file_suffix|e }} on Facebook!" href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}" target="_blank" aria-label="">
   <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
     <svg version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
         <g>
@@ -22,7 +22,7 @@
 </a>
 </li><li>
 <!-- sharingbuttons.io for Twitter -->
-<a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text=This%20super%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!&amp;url=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}" target="_blank" aria-label="">
+<a class="resp-sharing-button__link" title="Share this article {{ pagename|e }}{{ file_suffix|e }} on Twitter!" href="https://twitter.com/intent/tweet/?text=This%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!&amp;url=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}" target="_blank" aria-label="">
   <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
     <svg version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
         <g>
@@ -34,7 +34,7 @@
 </a>
 </li><li>
 <!-- sharingbuttons.io for Google+ -->
-<a class="resp-sharing-button__link" href="https://plus.google.com/share?url=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}" target="_blank" aria-label="">
+<a class="resp-sharing-button__link" title="Share this article {{ pagename|e }}{{ file_suffix|e }} on Google+!" href="https://plus.google.com/share?url=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}" target="_blank" aria-label="">
   <div class="resp-sharing-button resp-sharing-button--google resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
     <svg version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
         <g>
@@ -47,7 +47,7 @@
 </a>
 </li><li>
 <!-- sharingbuttons.io for Tumblr -->
-<a class="resp-sharing-button__link" href="https://www.tumblr.com/widgets/share/tool?posttype=link&amp;title=This%20super%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!&amp;caption=This%20super%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!&amp;content=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}&amp;canonicalUrl=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}&amp;shareSource=tumblr_share_button" target="_blank" aria-label="">
+<a class="resp-sharing-button__link" title="Share this article {{ pagename|e }}{{ file_suffix|e }} on Tumblr!" href="https://www.tumblr.com/widgets/share/tool?posttype=link&amp;title=This%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!&amp;caption=This%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!&amp;content=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}&amp;canonicalUrl=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}&amp;shareSource=tumblr_share_button" target="_blank" aria-label="">
   <div class="resp-sharing-button resp-sharing-button--tumblr resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
     <svg version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
         <g>
@@ -59,7 +59,7 @@
 </a>
 </li><li>
 <!-- sharingbuttons.io for E-Mail -->
-<a class="resp-sharing-button__link" href="mailto:?subject=This%20super%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!&amp;body=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}" target="_blank" aria-label="">
+<a class="resp-sharing-button__link" title="Share this article {{ pagename|e }}{{ file_suffix|e }} by email!" href="mailto:?subject=This%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!&amp;body=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}" target="_blank" aria-label="">
   <div class="resp-sharing-button resp-sharing-button--email resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
     <svg version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
         <path d="M22,4H2C0.897,4,0,4.897,0,6v12c0,1.103,0.897,2,2,2h20c1.103,0,2-0.897,2-2V6C24,4.897,23.103,4,22,4z M7.248,14.434 l-3.5,2C3.67,16.479,3.584,16.5,3.5,16.5c-0.174,0-0.342-0.09-0.435-0.252c-0.137-0.239-0.054-0.545,0.186-0.682l3.5-2 c0.24-0.137,0.545-0.054,0.682,0.186C7.571,13.992,7.488,14.297,7.248,14.434z M12,14.5c-0.094,0-0.189-0.026-0.271-0.08l-8.5-5.5 C2.997,8.77,2.93,8.46,3.081,8.229c0.15-0.23,0.459-0.298,0.691-0.147L12,13.405l8.229-5.324c0.232-0.15,0.542-0.084,0.691,0.147 c0.15,0.232,0.083,0.542-0.148,0.691l-8.5,5.5C12.189,14.474,12.095,14.5,12,14.5z M20.934,16.248 C20.842,16.41,20.673,16.5,20.5,16.5c-0.084,0-0.169-0.021-0.248-0.065l-3.5-2c-0.24-0.137-0.323-0.442-0.186-0.682 s0.443-0.322,0.682-0.186l3.5,2C20.988,15.703,21.071,16.009,20.934,16.248z"/>
@@ -69,7 +69,7 @@
 </a>
 </li><li>
 <!-- sharingbuttons.io for Pinterest -->
-<a class="resp-sharing-button__link" href="https://pinterest.com/pin/create/button/?url=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}&amp;media=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}&amp;summary=This%20super%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!" target="_blank" aria-label="">
+<a class="resp-sharing-button__link" title="Share this article {{ pagename|e }}{{ file_suffix|e }} on Pinterest!" href="https://pinterest.com/pin/create/button/?url=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}&amp;media=http%3A%2F%2Fperso.crans.org%2Fbesson%2F{{ pagename|e }}{{ file_suffix|e }}&amp;summary=This%20cool%20article%20from%20Lilian%20Besson&#x27;s%20website!" target="_blank" aria-label="">
   <div class="resp-sharing-button resp-sharing-button--pinterest resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
     <svg version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve">
         <path d="M12.137,0.5C5.86,0.5,2.695,5,2.695,8.752c0,2.272,0.8 ,4.295,2.705,5.047c0.303,0.124,0.574,0.004,0.661-0.33 c0.062-0.231,0.206-0.816,0.271-1.061c0.088-0.331,0.055-0.446-0.19-0.736c-0.532-0.626-0.872-1.439-0.872-2.59 c0-3.339,2.498-6.328,6.505-6.328c3.548,0,5.497,2.168,5.497,5.063c0,3.809-1.687,7.024-4.189,7.024 c-1.382,0-2.416-1.142-2.085-2.545c0.397-1.675,1.167-3.479,1.167-4.688c0-1.081-0.58-1.983-1.782-1.983 c-1.413,0-2.548,1.461-2.548,3.42c0,1.247,0.422,2.09,0.422,2.09s-1.445,6.126-1.699,7.199c-0.505,2.137-0.076,4.756-0.04,5.02 c0.021,0.157,0.224,0.195,0.314,0.078c0.13-0.171,1.813-2.25,2.385-4.325c0.162-0.589,0.929-3.632,0.929-3.632 c0.459,0.876,1.801,1.646,3.228,1.646c4.247,0,7.128-3.871,7.128-9.053C20.5,4.15,17.182,0.5,12.137,0.5z"/>
