Add a tiny 'créé avec ♥' ('make with love') in the 'help' menu (Meny, shortcut = 'h').

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -192,7 +192,7 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
 +"</br>\n Abonnez-vous à un de mes flux RSS :</br>\n"
 +"  - <a href=\"https://bitbucket.org/lbesson/web-sphinx/rss\">bitbucket.org/lbesson/web-sphinx/rss</a></br>\n"
 +"  - <a href=\"http://perso.crans.org/besson/rss.xml\">perso.crans.org/besson/rss.xml</a></br>\n"
-+"<small>Ce site est créé par Lilian Besson, © 2011-2016</small>",
++"<small>Ce site est créé avec ♥ par Lilian Besson, © 2011-2016</small>",
   {layout:'center', type:'information'}); });
 {% if prev %}Mousetrap.bind(["left", "p"], function() { alert("Going to prev <a href=\"{{ prev.link|e }}\">{{ prev.link|e }}</a>"); location.href="{{ prev.link|e }}"; });{% endif %}
  Mousetrap.bind(["i"], function() { alert("Going to index.html"); location.href="index.html";});
