--- a/.templates/sourcepdf.en.html
+++ b/.templates/sourcepdf.en.html
@@ -17,7 +17,7 @@
  <script type="text/javascript">
   var path = "{{ sourcename }}";
   var url = window.location.protocol + "//" + window.location.host + window.location.port + window.location.pathname + ".asc";
-  console.log("[INFO] url=" + url);
+  // console.log("[INFO] url=" + url);
   window.document.write("<li><a class=\"external-reference\" href=\"https://bitbucket.org/lbesson/web-sphinx/src/master/"
      + path.replace(".txt", ".rst")
      + "\" title=\"On the git repository that hosts the source of the page " + path
