It works also with the latest version of Sphinx (v1.4.5 and not a custom build of the v1.4.a+)

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -251,8 +251,8 @@ to collect audience log, you can disable it with
  <img alt="Python v2.7.10 powered :)"
       src="{{ pathto('_images/.python_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Made with Sphinx v1.4a0+" href="http://sphinx-doc.org/">
- <img alt="Made with Sphinx v1.4a0+"
+<li><a class="image-reference" title="Made with Sphinx v1.4.5" href="http://sphinx-doc.org/">
+ <img alt="Made with Sphinx v1.4.5"
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Made on (X)Ubuntu 15.10" href="https://www.ubuntu.com/about/about-ubuntu">
