Update versions of all softwares, as I upgraded to XUbuntu 16.10

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -231,36 +231,36 @@ to collect audience log, you can disable it with
      src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel" />
 </noscript>
 <div class="supportBadges"><ul>
-<li><a class="image-reference" title="Tested on Firefox v47.0, Chromium v351and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
- <img alt="Tested on Firefox v47.0, Chromium v51 and elinks v0.12pre6"
+<li><a class="image-reference" title="Tested on Firefox v50.0.1, Chromium v55.0.2 and elinks v0.12pre6" href="https://www.mozilla.org/en-US/firefox/all/">
+ <img alt="Tested on Firefox v50.0.1, Chromium v55.0.2 and elinks v0.12pre6"
       src="{{ pathto('_images/.firefox_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Uses Google Analytics" href="https://www.google.com/analytics/">
  <img alt="Uses Google Analytics"
       src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Written with GNU Nano 2.4.2 and Sublime Text v3.1.25" href="http://www.nano-editor.org/">
- <img alt="Written with GNU Nano 2.4.2 and Sublime Text v3.1.25"
+<li><a class="image-reference" title="Written with GNU Nano 2.6.3 and Sublime Text v3.1.25" href="http://www.nano-editor.org/">
+ <img alt="Written with GNU Nano 2.6.3 and Sublime Text v3.1.25"
       src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="This website is an Open Source project, released with the GPLv3 License" href="http://www.gnu.org/licenses/gpl.html">
  <img alt="This website is an Open Source project, released with the GPLv3 License"
       src="{{ pathto('_images/.opensource_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Python v2.7.10 powered :)" href="https://www.python.org/download/">
- <img alt="Python v2.7.10 powered :)"
+<li><a class="image-reference" title="Python v3.5.2+ powered :)" href="https://www.python.org/download/">
+ <img alt="Python v3.5.2+ powered :)"
       src="{{ pathto('_images/.python_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Made with Sphinx v1.4.8" href="http://sphinx-doc.org/">
- <img alt="Made with Sphinx v1.4.8"
+<li><a class="image-reference" title="Made with Sphinx v1.5.1" href="http://sphinx-doc.org/">
+ <img alt="Made with Sphinx v1.5.1"
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Made on (X)Ubuntu 15.10" href="https://www.ubuntu.com/about/about-ubuntu">
- <img alt="Made on (X)Ubuntu 15.10"
+<li><a class="image-reference" title="Made on (X)Ubuntu 16.10" href="https://www.ubuntu.com/about/about-ubuntu">
+ <img alt="Made on (X)Ubuntu 16.10"
       src="{{ pathto('_images/.ubuntu_80_15.png', true)|e }}"
       style="width: 80.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.5.0" href="https://bitbucket.org/lbesson/web-sphinx/" >
- <img alt="Source code hosted on bitbucket.org, managed with Git v2.5.0"
+<li><a class="image-reference" title="Source code hosted on bitbucket.org, managed with Git v2.9.3" href="https://bitbucket.org/lbesson/web-sphinx/" >
+ <img alt="Source code hosted on bitbucket.org, managed with Git v2.9.3"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}"
       style="width: 36.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Powered by MathJax v2.5.0" href="http://www.mathjax.org">
@@ -269,7 +269,7 @@ to collect audience log, you can disable it with
       style="width: 60.0px; height: 12.0px;" /></a></li>
 <li><script type="text/javascript">
   if ( (window.location.host.substring(0, 6) == 'jarvis') || (window.location.host.substring(0, 6) == '127.0.') || (window.location.host.substring(0, 7) == '0.0.0.0') ) {
-  window.document.write("<a class=\"image-reference\" title=\"Web server : nginx v1.9.3 (Ubuntu)\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx v1.9.3 (Ubuntu) on "
+  window.document.write("<a class=\"image-reference\" title=\"Web server : nginx v1.10.1 (Ubuntu)\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx v1.10.1 (Ubuntu) on "
   + window.location.host + ":80\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>");
   }
   else {
